Fix availability info popup location on mobile

--- a/ppp.scss
+++ b/ppp.scss
@@ -169,7 +169,7 @@ body{
 .box{
     position: fixed;
     width:auto;
-    top:82%;
+    top:70%;
     bottom:auto;
     left:5%;
     right:5%;
